# Sajilo-Bazarr

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
database/: sajilobazar.sql
include/: addcategory.h  admindashboard.h  attendancemanager.h  backbase.h  billing.h  category.h  classlogout.h  dashboard.h  frontdesk.h  frontproduct.h  frontprofile.h  inventory.h  login.h  mainwindow.h  mytasks.h  pending.h  product.h  productbase.h  productstaff.h  profile.h  register.h  reportdb.h  staff.h  staffdashboard.h  staffperform.h  stockservice.h  supplier.h  taskmanagement.h
source/: addcategory.cpp  addcategory.h  admindashboard.cpp  attendancemanager.cpp  billing.cpp  category.cpp  classlogout.cpp  dashboard.cpp  frontdesk.cpp  frontproduct.cpp  frontprofile.cpp  inventory.cpp  login.cpp  main.cpp  mainwindow.cpp  mytasks.cpp  pending.cpp  product.cpp  productbase.cpp  productstaff.cpp  profile.cpp  register.cpp  reportdb.cpp  staff.cpp  staffdashboard.cpp  staffperform.cpp  stockservice.cpp  supplier.cpp  supplier.h  taskmanagement.cpp
ui/: addcategory.ui  admindashboard.ui  billing.ui  category.ui  frontdesk.ui  frontproduct.ui  frontprofile.ui  inventory.ui  login.ui  mainwindow.ui  mytasks.ui  pending.cpp  pending.ui  product.ui  productstaff.ui  profile.ui  register.ui  staff.ui  staffdashboard.ui  staffdashboard.ui.autosave  staffperform.ui  supplier.ui  taskmanagement.ui
